--- a/src/main/resources/pizzadelivery/cis434finalproject/hello-view.fxml
+++ b/src/main/resources/pizzadelivery/cis434finalproject/hello-view.fxml
@@ -1,16 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="pizzadelivery.cis434finalproject.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pizzadelivery.cis434finalproject.PizzaController">
+   <left>
+      <AnchorPane prefHeight="407.0" prefWidth="228.0" style="-fx-background-color: #ee0f0f;" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="12.0" layoutY="133.0" prefHeight="17.0" prefWidth="201.0" text="PIZZA BUILDER" textFill="#f7f4f4">
+               <font>
+                  <Font name="Times New Roman Bold" size="24.0" />
+               </font>
+            </Label>
+            <Line endX="100.0" layoutX="114.0" layoutY="176.0" startX="-100.0" stroke="#fffafa" strokeWidth="3.0" />
+            <Label layoutX="9.0" layoutY="175.0" prefHeight="59.0" prefWidth="197.0" text="Customize~Order~Enjoy" textFill="#f8f6f6">
+               <font>
+                  <Font name="Italic_IV25" size="13.0" />
+               </font>
+            </Label>
+            <Arc fill="#7297b500" layoutX="122.0" layoutY="185.0" length="270.0" radiusX="100.0" radiusY="100.0" startAngle="45.0" stroke="#e5d8d896" strokeType="INSIDE" type="ROUND" />
+            <Label layoutX="39.0" layoutY="337.0" prefHeight="15.0" prefWidth="154.0" text="Copyright (c). All Rights Reserved." textFill="#fcefef">
+               <font>
+                  <Font name="Times New Roman" size="10.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </left>
+   <right>
+      <AnchorPane prefHeight="400.0" prefWidth="332.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="78.0" layoutY="58.0" prefHeight="25.0" prefWidth="136.0" text="Secure Login" textFill="#ee0f0f">
+               <font>
+                  <Font name="Times New Roman Bold" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="30.0" layoutY="129.0" text="Username">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="30.0" layoutY="176.0" text="Password">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="usernameTextField" layoutX="105.0" layoutY="127.0" />
+            <PasswordField fx:id="passwordPasswordField" layoutX="105.0" layoutY="174.0" />
+            <Button fx:id="loginButton" layoutX="18.0" layoutY="236.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="40.0" prefWidth="257.0" style="-fx-background-color: #ee0f0f;" text="Login" textFill="#fcf8f8">
+               <font>
+                  <Font name="Times New Roman" size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="cancelButton" layoutX="20.0" layoutY="299.0" mnemonicParsing="false" onAction="#cancelButtononAction" prefHeight="42.0" prefWidth="256.0" style="-fx-background-color: #ee0f0f;" text="Cancel" textFill="#fcf1f1">
+               <font>
+                  <Font name="Times New Roman" size="18.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+   </right>
+</BorderPane>
